feat: noscript basics

--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,10 @@
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="TODO" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <meta name="theme-color" content="#19161f" />
+  <meta name="description"
+    content="Hi, my name is Nick Mosher . I'm a Senior User Experience designer, futurist, innovator, husband, and father. This is a small sample of my work as a design, researcher, and innovator." />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/monogram.svg" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -17,7 +18,38 @@
 
 <body>
   <!-- TODO: Replace noscript with barebones verison of portfolio -->
-  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <noscript>
+    <div>
+      <h1>Portfolio</h1>
+      <p><b>You need to enable JavaScript in order to see my portfolio in full.</b></p>
+      <p>Hi, my name is <b>Nick Mosher</b>. I'm a <b>Senior User Experience</b> designer, futurist, innovator, husband,
+        and father. This is a small sample of my work as a design, researcher, and innovator. Let me know if you have
+        any questions: <a href="mailto:nick@mosher.me">nick@mosher.me</a>.</p>
+      <p>Every project has unique needs. Sometimes a product is fully fleshed out and needs a minor tweak. Sometimes we
+        need to solve a harry problem. Sometimes we need to step back and think about where the product is going in the
+        next 30 years.</p>
+      <p>This portfolio will highlight each stage of the design process. I hope to introduce you to my thoughts on each
+        stage as well as provide an example artifact from each stage.</p>
+      <h3>Stages of Design</h3>
+      <ol>
+        <li><a href="/design-futures">Design Futures</a></li>
+        <li><a href="/customer-interviews">Customer Interviews</a></li>
+        <li><a href="/personas">Personas</a></li>
+        <li><a href="/#workflow">Workflow</a></li>
+        <li><a href="/#wireframes">Wireframes</a></li>
+        <li><a href="/usability1">Usability Testing (round 1)</a></li>
+        <li><a href="/design-sprints">Design Sprints</a></li>
+        <li><a href="/visual-design">Visual Design</a></li>
+        <li><a href="/usability2">Usability Testing (round 2)</a></li>
+        <li><a href="/specs">Development Specs</a></li>
+        <li><a href="/usability3">Usability Testing (round 3)</a></li>
+        <li><a href="/support">Design Support</a></li>
+        <li><a href="/benchmark">Benchmark Usability Testing</a></li>
+      </ol>
+    </div>
+
+
+  </noscript>
   <div id="root"></div>
   <!--
       This HTML file is a template.
