fix: added consistancy between slugs and urls

--- a/public/index.html
+++ b/public/index.html
@@ -37,12 +37,12 @@
         <li><a href="/personas">Personas</a></li>
         <li><a href="/#workflow">Workflow</a></li>
         <li><a href="/#wireframes">Wireframes</a></li>
-        <li><a href="/usability1">Usability Testing (round 1)</a></li>
+        <li><a href="/usability">Usability Testing (round 1)</a></li>
         <li><a href="/design-sprints">Design Sprints</a></li>
         <li><a href="/visual-design">Visual Design</a></li>
-        <li><a href="/usability2">Usability Testing (round 2)</a></li>
+        <li><a href="/usability">Usability Testing (round 2)</a></li>
         <li><a href="/specs">Development Specs</a></li>
-        <li><a href="/usability3">Usability Testing (round 3)</a></li>
+        <li><a href="/usability">Usability Testing (round 3)</a></li>
         <li><a href="/support">Design Support</a></li>
         <li><a href="/benchmark">Benchmark Usability Testing</a></li>
       </ol>
