--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#19161f" />
   <meta name="description"
-    content="Hi, my name is Nick Mosher . I'm a Senior User Experience designer, futurist, innovator, husband, and father. This is a small sample of my work as a design, researcher, and innovator." />
+    content="Hi, my name is Nick Mosher. I'm a Senior User Experience Designer, husband, and father. Here I have collected a small sample of my work as a designer, researcher, futurist, and innovator." />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/monogram.svg" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -23,15 +23,12 @@
     <div>
       <h1>Portfolio</h1>
       <p><b>You need to enable JavaScript in order to see my portfolio in full.</b></p>
-      <p>Hi, my name is <b>Nick Mosher</b>. I'm a <b>Senior User Experience</b> designer, futurist, innovator, husband,
-        and father. This is a small sample of my work as a design, researcher, and innovator. Let me know if you have
-        any questions: <a href="mailto:nick@mosher.me">nick@mosher.me</a>.</p>
-      <p>Every project has unique needs. Sometimes a product is fully fleshed out and needs a minor tweak. Sometimes we
-        need to solve a harry problem. Sometimes we need to step back and think about where the product is going in the
-        next 30 years.</p>
-      <p>This portfolio will highlight each stage of the design process. I hope to introduce you to my thoughts on each
-        stage as well as provide an example artifact from each stage.</p>
-      <h3>Stages of Design</h3>
+      <p>Hi, my name is <b>Nick Mosher</b>. I'm a <b>Senior User Experience Designer</b>, husband,
+        and father. Here I have collected a small sample of my work as a designer, researcher, futurist,
+        and innovator. Let me know if you have any questions: <a href="mailto:nick@mosher.me">nick@mosher.me</a>.</p>
+      <p>This portfolio will highlight each stage of my design process. However, I understand that each project is
+        unique and requires its own process customized to its individual needs. I hope to introduce you to my thoughts
+        about each stage as well as provide an example artifact.</h3>
       <ol>
         <li><a href="/design-futures">Design Futures</a></li>
         <li><a href="/customer-interviews">Customer Interviews</a></li>
