feat: added stylelint and wrong files

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
   <meta name="theme-color" content="#19161f" />
   <meta name="description"
     content="Hi, my name is Nick Mosher. I'm a Senior User Experience Designer, husband, and father. Here I have collected a small sample of my work as a designer, researcher, futurist, and innovator." />
@@ -18,7 +18,6 @@
 </head>
 
 <body>
-  <!-- TODO: Replace noscript with barebones verison of portfolio -->
   <noscript>
     <div>
       <h1>Portfolio</h1>
