fix: content edits

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
         and father. Here I have collected a small sample of my work as a designer, researcher, futurist,
         and innovator. Let me know if you have any questions: <a href="mailto:nick@mosher.me">nick@mosher.me</a>.</p>
       <p>This portfolio will highlight each stage of my design process. However, I understand that each project is
-        unique and requires its own process customized to its individual needs. I hope to introduce you to my thoughts
+        unique and requires its own customized process. I hope to introduce you to my thoughts
         about each stage as well as provide an example artifact.</h3>
       <ol>
         <li><a href="/design-futures">Design Futures</a></li>
